--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 
 </head>
 <body> 
+	
+	<script type='text/javascript' src="http://d3js.org/d3.v3.min.js"></script>
+	<script type='text/javascript' src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 	<script type='text/javascript' src='https://d3js.org/d3.v4.min.js'></script>
 	<script type='text/javascript' src='javascripts/script.js'></script>
 </body>
