--- a/svg.html
+++ b/svg.html
@@ -15,7 +15,7 @@
 				gene.options[index+1] = new Option(element.gene_id,element.gene_id);
 			};
 			gene.options[0] = new Option("Choose Gene ID", "#");
-			d3.json("testten.json",function(error,data){
+			d3.json("BDGP6.json",function(error,data){
 				data.forEach(addOptions);
 				gene.options.length = data.length+1;
 				geneData = data;
@@ -33,7 +33,7 @@
 	</select>
 	<br>
 	<script type='text/javascript' src='javascripts/script.js'></script>
-
+	 <!-- <script src="//code.jquery.com/jquery-1.11.3.min.js"></script> -->
 	
 </body>
 </html>
