--- a/svg.html
+++ b/svg.html
@@ -8,11 +8,11 @@
      <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
      <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
      <link rel='stylesheet' type='text/css' href='stylesheets/plot.css'/>
-	
+	 <script type='text/javascript' src='javascripts/script.js'></script>
+	 <!-- <script type='text/javascript' src='javascripts/virtualscroller.js'></script> -->
     
 </head>
 <body> 
-
 	<script type="text/javascript">
 		function renewGene(index){
 			var temp = Array();
@@ -51,22 +51,31 @@
 				      		}
 					  }
 				});
+				$('.button').click(function(e){
+				  e.preventDefault();
+				  $('#svg2_id').slideToggle();
+				});
 			});
 			
 		}
 		 
 	</script>
-	
-	<select id="version" onchange="renewGene(this.value)">
-		<option value="#">Choose one version</option>
-		<option value="version1">version1</option>
-	</select>
-    <label for="autocomplete-gene">Gene_ID: </label>
-    <input id="autocomplete-gene" placeholder="choose one version">
-     
-
-	<br>
-	<script type='text/javascript' src='javascripts/script.js'></script>
+	<div class="div_class">
+		<select id="version" onchange="renewGene(this.value)">
+			<option value="#">Choose one version</option>
+			<option value="version1">version1</option>
+		</select>
+	    <label for="autocomplete-gene">Gene_ID: </label>
+	    <input id="autocomplete-gene" placeholder="choose one version">
+	    <input type="checkbox" id="verti_line" checked> display vertical line 
+	    <!-- <input type="checkbox" id="arc" > use arc line  -->
+		<br>
+	</div>
+	<div class="div_class" id = "svg1_id" style="height:240px"></div>
+	<div class="div_class" id = "isoform_div" style="height:30px; display: none;"  >
+		<a class="button" href="" style="font-size:150%">ISOFORMS</a>
+	</div>
+	<div class="div_class" id = "svg2_id" style="display: none"></div>
 	
 	
 </body>
