--- a/svg.html
+++ b/svg.html
@@ -57,7 +57,7 @@
 				      		}
 					  }
 				});
-				$('.button').click(function(e){
+				$('#isoform_div').click(function(e){
 				  e.preventDefault();
 				  $('#svg2_id').slideToggle();
 				});
@@ -80,8 +80,8 @@
 		<br>
 	</div>
 	<div class="div_class" id = "svg1_id" style="height:240px"></div>
-	<div class="div_class" id = "isoform_div" style="height:30px; display: none;"  >
-		<a class="button" href="" style="font-size:150%">ISOFORMS</a>
+	<div class="div_class" id = "isoform_div" style="height:10px;font-weight: bold;  display: none;"  >
+		Isoforms
 	</div>
 	<div class="div_class" id = "svg2_id" style="display: none"></div>
 	
