--- a/svg.html
+++ b/svg.html
@@ -81,7 +81,7 @@
 	</div>
 	<div class="div_class" id = "svg1_id" style="height:240px"></div>
 	<div class="div_class" id = "isoform_div" style="height:10px;font-weight: bold;  display: none;"  >
-		Isoforms
+	<img src="arrows.png" style="width:10px;height:10px;vertical-align: middle;"><span style="height: 10px;"> Isoforms</span> 
 	</div>
 	<div class="div_class" id = "svg2_id" style="display: none"></div>
 	
